--- a/docroot/.htaccess
+++ b/docroot/.htaccess
@@ -95,6 +95,7 @@ DirectoryIndex index.php index.html index.htm
   # uncomment the following:
   RewriteCond %{HTTP_HOST} .
   RewriteCond %{HTTP_HOST} !^www\. [NC]
+  RewriteCond %{ENV:AH_SITE_ENVIRONMENT} prod [NC] # only prod
   RewriteRule ^ http://www.%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
   #
   # To redirect all users to access the site WITHOUT the 'www.' prefix,
