--- a/config/default/block.block.drupalbrasil_powered.yml
+++ b/config/default/block.block.drupalbrasil_powered.yml
@@ -1,15 +1,15 @@
-uuid: 774f24f7-c002-42a5-a4ca-e9e2c67dd30a
+uuid: 8fdd45d3-1e30-4345-b6ee-e7cfa742b107
 langcode: pt-br
 status: true
 dependencies:
   module:
     - system
   theme:
-    - drupal_brasil
+    - drupalbrasil
 _core:
   default_config_hash: jQQUUWN2Uxr5qZtc9zcJKBCxpKY8orN1u2HPqYYRQDI
-id: drupal_brasil_powered
-theme: drupal_brasil
+id: drupalbrasil_powered
+theme: drupalbrasil
 region: footer_fifth
 weight: 10
 provider: null
