--- a/config/default/core.entity_view_display.node.article.teaser.yml
+++ b/config/default/core.entity_view_display.node.article.teaser.yml
@@ -49,8 +49,8 @@ content:
   links:
     weight: 100
     region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   comment: true
-  field_image: true
-  field_tags: true
   langcode: true
