--- a/config/default/core.entity_view_display.node.page.default.yml
+++ b/config/default/core.entity_view_display.node.page.default.yml
@@ -25,5 +25,8 @@ content:
   links:
     weight: 101
     region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   langcode: true
+  layout_builder__layout: true
