--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -1,4 +1,6 @@
 module:
+  admin_toolbar: 0
+  admin_toolbar_tools: 0
   automated_cron: 0
   big_pipe: 0
   block: 0
@@ -13,6 +15,7 @@ module:
   contextual: 0
   datetime: 0
   dblog: 0
+  drupalbrasil_blocks: 0
   dynamic_page_cache: 0
   editor: 0
   field: 0
@@ -22,6 +25,7 @@ module:
   help: 0
   history: 0
   image: 0
+  kint: 0
   language: 0
   link: 0
   locale: 0
@@ -50,7 +54,7 @@ theme:
   bartik: 0
   seven: 0
   bootstrap_barrio: 0
-  drupal_brasil: 0
+  drupalbrasil: 0
 profile: standard
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
