--- a/config/default/system.theme.yml
+++ b/config/default/system.theme.yml
@@ -1,5 +1,5 @@
 admin: seven
-default: drupal_brasil
+default: drupalbrasil
 _core:
   default_config_hash: fOjer9hADYYnbCJVZMFZIIM1azTFWyg84ZkFDHfAbUg
 langcode: pt-br
