--- a/config/sync/block.block.drupalbrasil_content.yml
+++ b/config/sync/block.block.drupalbrasil_content.yml
@@ -1,15 +1,15 @@
-uuid: 3290ceda-b94c-4c90-89aa-90063432d10a
+uuid: 1cbd5058-a88d-4dd2-992f-1225ae8a893f
 langcode: pt-br
 status: true
 dependencies:
   module:
     - system
   theme:
-    - drupal_brasil
+    - drupalbrasil
 _core:
   default_config_hash: 9EoWV2Lot6FVSr50t4hoKgiz1LIXYWNG-IIPYsWxBqo
-id: drupal_brasil_content
-theme: drupal_brasil
+id: drupalbrasil_content
+theme: drupalbrasil
 region: content
 weight: 0
 provider: null
