--- a/config/sync/block.block.drupalbrasil_search.yml
+++ b/config/sync/block.block.drupalbrasil_search.yml
@@ -1,22 +1,22 @@
-uuid: 15ba0aa5-5d7c-4a7f-8f6e-fffa36670f59
+uuid: dd097855-c5d4-4f5d-aeff-df8b00216213
 langcode: pt-br
 status: true
 dependencies:
   module:
     - search
   theme:
-    - drupal_brasil
+    - drupalbrasil
 _core:
   default_config_hash: za-39d5WDUg6XvbyqSnuVYEeq6QM4qKJxW8MnoAha5A
-id: drupal_brasil_search
-theme: drupal_brasil
+id: drupalbrasil_search
+theme: drupalbrasil
 region: sidebar_first
 weight: -1
 provider: null
 plugin: search_form_block
 settings:
   id: search_form_block
-  label: Buscar
+  label: Search
   provider: search
   label_display: visible
 visibility: {  }
