--- a/config/default/block.block.bootstrap_barrio_search.yml
+++ b/config/default/block.block.bootstrap_barrio_search.yml
@@ -1,4 +1,4 @@
-uuid: d9dc18d7-f7ba-4857-8334-53b6635c646a
+uuid: f38ce9f2-2d6e-4868-8f97-9b1a097d6799
 langcode: pt-br
 status: true
 dependencies:
@@ -16,7 +16,7 @@ provider: null
 plugin: search_form_block
 settings:
   id: search_form_block
-  label: Buscar
+  label: Search
   provider: search
   label_display: visible
 visibility: {  }
