--- a/config/default/core.entity_view_display.node.page.default.yml
+++ b/config/default/core.entity_view_display.node.page.default.yml
@@ -22,11 +22,19 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  langcode:
+    type: language
+    weight: 0
+    region: content
+    label: above
+    settings:
+      link_to_entity: false
+      native_language: false
+    third_party_settings: {  }
   links:
     weight: 101
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
-  langcode: true
   layout_builder__layout: true
