--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -5,7 +5,6 @@ module:
   big_pipe: 0
   block: 0
   block_content: 0
-  bootstrap_library: 0
   breakpoint: 0
   ckeditor: 0
   color: 0
@@ -26,6 +25,7 @@ module:
   image: 0
   kint: 0
   language: 0
+  layout_plugin: 0
   link: 0
   locale: 0
   menu_ui: 0
