--- a/config/default/core.entity_view_display.block_content.basic.default.yml
+++ b/config/default/core.entity_view_display.block_content.basic.default.yml
@@ -5,7 +5,12 @@ dependencies:
   config:
     - block_content.type.basic
     - field.field.block_content.basic.body
+    - field.field.block_content.basic.field_background_color
+    - field.field.block_content.basic.field_container_fluid
+    - field.field.block_content.basic.field_image_background
+    - field.field.block_content.basic.field_min_height
   module:
+    - options
     - text
 _core:
   default_config_hash: orJpHUlAc_wiQLMUjIgEJXGeiqylGHMPcmNRjGtct-M
@@ -21,5 +26,40 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_background_color:
+    weight: 3
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+    type: list_key
+    region: content
+  field_container_fluid:
+    weight: 4
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
+    region: content
+  field_image_background:
+    type: entity_reference_entity_view
+    weight: 1
+    label: hidden
+    settings:
+      view_mode: media_url
+      link: false
+    third_party_settings: {  }
+    region: content
+  field_min_height:
+    weight: 2
+    label: hidden
+    settings:
+      thousand_separator: ''
+      prefix_suffix: true
+    third_party_settings: {  }
+    type: number_integer
+    region: content
 hidden:
   langcode: true
