--- a/config/default/block.block.aboutadb.yml
+++ b/config/default/block.block.aboutadb.yml
@@ -1,11 +1,12 @@
-uuid: d152fb9a-b312-4581-933c-0fe6309812c6
+uuid: 6845e73d-ef8b-4789-9970-818b7dd6d9de
 langcode: pt-br
 status: true
 dependencies:
   content:
-    - 'block_content:basic:ea6ca271-f840-41de-9ca0-ef490a6f0059'
+    - 'block_content:basic:a0b8876c-645a-49ef-ba95-60c5af3820ad'
   module:
     - block_content
+    - system
   theme:
     - drupalbrasil
 id: aboutadb
@@ -13,13 +14,18 @@ theme: drupalbrasil
 region: content
 weight: 0
 provider: null
-plugin: 'block_content:ea6ca271-f840-41de-9ca0-ef490a6f0059'
+plugin: 'block_content:a0b8876c-645a-49ef-ba95-60c5af3820ad'
 settings:
-  id: 'block_content:ea6ca271-f840-41de-9ca0-ef490a6f0059'
+  id: 'block_content:a0b8876c-645a-49ef-ba95-60c5af3820ad'
   label: 'About ADB'
   provider: block_content
   label_display: '0'
   status: true
   info: ''
   view_mode: full
-visibility: {  }
+visibility:
+  request_path:
+    id: request_path
+    pages: '<front>'
+    negate: false
+    context_mapping: {  }
