--- a/config/default/block.block.aboutdrupal.yml
+++ b/config/default/block.block.aboutdrupal.yml
@@ -1,11 +1,12 @@
-uuid: 0443b8cc-d6d1-4b74-b62b-e1268cbdcde0
+uuid: c5c6b1d9-b9c7-4c38-aa04-33bf004270a8
 langcode: pt-br
 status: true
 dependencies:
   content:
-    - 'block_content:basic:85211615-c6cc-44ae-a14b-3fd2a5916043'
+    - 'block_content:basic:83773ab0-7d81-46cb-b5b7-8a1e5d18d2bf'
   module:
     - block_content
+    - system
   theme:
     - drupalbrasil
 id: aboutdrupal
@@ -13,13 +14,18 @@ theme: drupalbrasil
 region: content
 weight: -1
 provider: null
-plugin: 'block_content:85211615-c6cc-44ae-a14b-3fd2a5916043'
+plugin: 'block_content:83773ab0-7d81-46cb-b5b7-8a1e5d18d2bf'
 settings:
-  id: 'block_content:85211615-c6cc-44ae-a14b-3fd2a5916043'
+  id: 'block_content:83773ab0-7d81-46cb-b5b7-8a1e5d18d2bf'
   label: 'About Drupal'
   provider: block_content
   label_display: '0'
   status: true
   info: ''
   view_mode: full
-visibility: {  }
+visibility:
+  request_path:
+    id: request_path
+    pages: '<front>'
+    negate: false
+    context_mapping: {  }
