--- a/config/default/core.entity_view_display.node.article.default.yml
+++ b/config/default/core.entity_view_display.node.article.default.yml
@@ -8,11 +8,9 @@ dependencies:
     - field.field.node.article.comment
     - field.field.node.article.field_image
     - field.field.node.article.field_tags
-    - image.style.large
     - node.type.article
   module:
     - comment
-    - image
     - text
     - user
 _core:
@@ -24,14 +22,14 @@ mode: default
 content:
   body:
     type: text_default
-    weight: 0
+    weight: 2
     region: content
     settings: {  }
     third_party_settings: {  }
     label: hidden
   comment:
     type: comment_default
-    weight: 110
+    weight: 5
     region: content
     label: above
     settings:
@@ -39,29 +37,29 @@ content:
       pager_id: 0
     third_party_settings: {  }
   content_moderation_control:
-    weight: -20
+    weight: 0
     region: content
     settings: {  }
     third_party_settings: {  }
   field_image:
-    type: image
-    weight: -1
-    region: content
-    settings:
-      image_style: large
-      image_link: ''
-    third_party_settings: {  }
+    type: entity_reference_entity_view
+    weight: 1
     label: hidden
+    settings:
+      view_mode: full
+      link: false
+    third_party_settings: {  }
+    region: content
   field_tags:
     type: entity_reference_label
-    weight: 10
+    weight: 3
     region: content
     label: inline
     settings:
       link: true
     third_party_settings: {  }
   links:
-    weight: 100
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
