--- a/config/default/core.entity_view_display.node.article.rss.yml
+++ b/config/default/core.entity_view_display.node.article.rss.yml
@@ -18,6 +18,11 @@ targetEntityType: node
 bundle: article
 mode: rss
 content:
+  content_moderation_control:
+    weight: -20
+    settings: {  }
+    third_party_settings: {  }
+    region: content
   links:
     weight: 100
     region: content
