--- a/config/default/core.entity_view_display.node.article.teaser.yml
+++ b/config/default/core.entity_view_display.node.article.teaser.yml
@@ -8,10 +8,8 @@ dependencies:
     - field.field.node.article.comment
     - field.field.node.article.field_image
     - field.field.node.article.field_tags
-    - image.style.medium
     - node.type.article
   module:
-    - image
     - text
     - user
 _core:
@@ -23,36 +21,36 @@ mode: teaser
 content:
   body:
     type: text_trimmed
-    weight: 0
+    weight: 2
     region: content
     settings:
       trim_length: 300
     third_party_settings: {  }
     label: hidden
   content_moderation_control:
-    weight: -20
+    weight: 0
     region: content
     settings: {  }
     third_party_settings: {  }
   field_image:
-    type: image
-    weight: -1
+    type: entity_reference_entity_view
+    weight: 1
     region: content
-    settings:
-      image_style: medium
-      image_link: content
-    third_party_settings: {  }
     label: hidden
+    settings:
+      view_mode: teaser
+      link: false
+    third_party_settings: {  }
   field_tags:
     type: entity_reference_label
-    weight: 10
+    weight: 3
     region: content
     settings:
       link: true
     third_party_settings: {  }
     label: hidden
   links:
-    weight: 100
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
