--- a/config/default/field.storage.node.field_image.yml
+++ b/config/default/field.storage.node.field_image.yml
@@ -1,34 +1,20 @@
-uuid: 769d121d-be5b-4f08-a370-d45fdf705ac9
+uuid: 95437aec-d10f-4907-baff-27492d9c120d
 langcode: pt-br
 status: true
 dependencies:
   module:
-    - file
-    - image
+    - media
     - node
-_core:
-  default_config_hash: SkXIPKZYiIMMtnBmfnxk58RYfbZ8cHSw5NZPY_JByME
 id: node.field_image
 field_name: field_image
 entity_type: node
-type: image
+type: entity_reference
 settings:
-  uri_scheme: public
-  default_image:
-    uuid: null
-    alt: ''
-    title: ''
-    width: null
-    height: null
-  target_type: file
-  display_field: false
-  display_default: false
-module: image
+  target_type: media
+module: core
 locked: false
 cardinality: 1
 translatable: true
-indexes:
-  target_id:
-    - target_id
+indexes: {  }
 persist_with_no_fields: false
 custom_storage: false
