--- a/config/default/core.entity_view_display.node.article.full.yml
+++ b/config/default/core.entity_view_display.node.article.full.yml
@@ -1,51 +1,68 @@
-uuid: 5a3ad1e4-a107-49d9-9d10-04684890d493
+uuid: 7c58c9df-940d-4de1-980d-c93799888c99
 langcode: pt-br
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.node.teaser
+    - core.entity_view_display.comment.comment.default
+    - core.entity_view_mode.node.full
     - field.field.node.article.body
     - field.field.node.article.comment
     - field.field.node.article.field_image
     - field.field.node.article.field_tags
     - node.type.article
   module:
+    - comment
     - text
     - user
 _core:
-  default_config_hash: 4NcL2hSQZBpJbYtNuh5jC6kyQTcAc1m5bQpTegEWEso
-id: node.article.teaser
+  default_config_hash: ChmU3AVqDKU32A_fyChG0W9dTRKmVBR58B6OClCLvZI
+id: node.article.full
 targetEntityType: node
 bundle: article
-mode: teaser
+mode: full
 content:
   body:
-    type: text_trimmed
-    weight: 1
+    type: text_default
+    weight: 2
     region: content
-    settings:
-      trim_length: 300
+    settings: {  }
     third_party_settings: {  }
     label: hidden
+  comment:
+    type: comment_default
+    weight: 5
+    region: content
+    label: above
+    settings:
+      view_mode: default
+      pager_id: 0
+    third_party_settings: {  }
   content_moderation_control:
     weight: 0
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_image:
+    type: entity_reference_entity_view
+    weight: 1
+    label: hidden
+    settings:
+      view_mode: full
+      link: false
+    third_party_settings: {  }
+    region: content
   field_tags:
     type: entity_reference_label
-    weight: 2
+    weight: 3
     region: content
+    label: inline
     settings:
       link: true
     third_party_settings: {  }
-    label: hidden
   links:
-    weight: 3
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
-  comment: true
-  field_image: true
   langcode: true
