Added Captcha, permissions and workflow

--- a/config/default/user.role.authenticated.yml
+++ b/config/default/user.role.authenticated.yml
@@ -11,14 +11,22 @@ is_admin: false
 permissions:
   - 'access comments'
   - 'access content'
+  - 'access content overview'
   - 'access shortcuts'
   - 'access site-wide contact form'
+  - 'access toolbar'
   - 'create article content'
+  - 'create image media'
   - 'create terms in tags'
+  - 'delete own article content'
+  - 'delete own image media'
   - 'edit own article content'
+  - 'edit own image media'
   - 'post comments'
   - 'search content'
   - 'skip comment approval'
+  - 'use editorial transition create_new_draft'
   - 'use text format basic_html'
   - 'view media'
   - 'view own unpublished content'
+  - 'view the administration theme'
