Fix user permissions to create media

--- a/config/default/user.role.authenticated.yml
+++ b/config/default/user.role.authenticated.yml
@@ -16,17 +16,24 @@ permissions:
   - 'access site-wide contact form'
   - 'access toolbar'
   - 'create article content'
+  - 'create document media'
   - 'create image media'
+  - 'create remote_video media'
   - 'create terms in tags'
   - 'delete own article content'
+  - 'delete own document media'
   - 'delete own image media'
+  - 'delete own remote_video media'
   - 'edit own article content'
+  - 'edit own document media'
   - 'edit own image media'
+  - 'edit own remote_video media'
   - 'post comments'
   - 'search content'
   - 'skip comment approval'
   - 'use editorial transition create_new_draft'
   - 'use text format basic_html'
+  - 'view article revisions'
   - 'view media'
   - 'view own unpublished content'
   - 'view the administration theme'
