--- a/config/default/views.view.frontpage.yml
+++ b/config/default/views.view.frontpage.yml
@@ -296,6 +296,9 @@ display:
     display_options:
       path: node
       display_extenders: {  }
+      title: 'Últimos conteúdos'
+      defaults:
+        title: false
     display_plugin: page
     display_title: Page
     id: page_1
