--- a/config/default/views.view.blog.yml
+++ b/config/default/views.view.blog.yml
@@ -178,6 +178,95 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags: {  }
+  block_user_posts:
+    display_plugin: block
+    id: block_user_posts
+    display_title: 'User posts'
+    position: 1
+    display_options:
+      display_extenders: {  }
+      use_more: true
+      defaults:
+        use_more: false
+        use_more_always: false
+        use_more_text: false
+        link_display: false
+        link_url: false
+        arguments: false
+        title: false
+        pager: false
+        relationships: false
+      use_more_always: true
+      use_more_text: 'Leia mais'
+      link_display: page_1
+      link_url: ''
+      arguments:
+        uid:
+          id: uid
+          table: users_field_data
+          field: uid
+          relationship: uid
+          group_type: group
+          admin_label: ''
+          default_action: default
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: false
+          title: ''
+          default_argument_type: user
+          default_argument_options:
+            user: false
+          default_argument_skip_url: false
+          summary_options:
+            base_path: ''
+            count: true
+            items_per_page: 25
+            override: false
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: false
+          validate:
+            type: none
+            fail: 'not found'
+          validate_options: {  }
+          break_phrase: false
+          not: false
+          entity_type: user
+          entity_field: uid
+          plugin_id: user_uid
+      display_description: ''
+      title: 'Posts do usuário'
+      pager:
+        type: some
+        options:
+          items_per_page: 5
+          offset: 0
+      block_description: 'Blog: User posts'
+      relationships:
+        uid:
+          id: uid
+          table: node_field_data
+          field: uid
+          relationship: none
+          group_type: group
+          admin_label: autor
+          required: false
+          entity_type: node
+          entity_field: uid
+          plugin_id: standard
+    cache_metadata:
+      max-age: -1
+      contexts:
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - url
+        - 'user.node_grants:view'
+        - user.permissions
+      tags: {  }
   feed_1:
     display_plugin: feed
     id: feed_1
