--- a/config/default/core.entity_view_display.media.image.teaser.yml
+++ b/config/default/core.entity_view_display.media.image.teaser.yml
@@ -5,17 +5,28 @@ dependencies:
   config:
     - core.entity_view_mode.media.teaser
     - field.field.media.image.field_media_image
+    - image.style.large
     - media.type.image
+  module:
+    - image
 _core:
   default_config_hash: B1a2aBHmUulUZN6HrxITEH1tSResuVjXMBEv1lUBtOo
 id: media.image.teaser
 targetEntityType: media
 bundle: image
 mode: teaser
-content: {  }
+content:
+  field_media_image:
+    type: image
+    weight: 0
+    region: content
+    label: hidden
+    settings:
+      image_style: large
+      image_link: ''
+    third_party_settings: {  }
 hidden:
   created: true
-  field_media_image: true
   langcode: true
   name: true
   thumbnail: true
