--- a/config/default/field.field.node.article.body.yml
+++ b/config/default/field.field.node.article.body.yml
@@ -15,11 +15,11 @@ entity_type: node
 bundle: article
 label: Corpo
 description: ''
-required: false
+required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
   display_summary: true
-  required_summary: false
+  required_summary: true
 field_type: text_with_summary
