--- a/docroot/themes/custom/bartik_subtheme/bartik_subtheme.libraries.yml
+++ b/docroot/themes/custom/bartik_subtheme/bartik_subtheme.libraries.yml
@@ -4,6 +4,8 @@ global-styling:
     base:
       //fonts.googleapis.com/css?family=Lato: {}
       //cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/fontawesome.min.css: {}
+      //cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/brands.min.css: {}
+      //cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/solid.min.css: {}
     theme:
       css/style.css: {}
       css/overrides.css: {}
