--- a/config/default/core.entity_view_display.user.user.default.yml
+++ b/config/default/core.entity_view_display.user.user.default.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - field.field.user.user.field_user_body
     - field.field.user.user.field_user_cidade
-    - field.field.user.user.field_user_empresa
+    - field.field.user.user.field_user_company
     - field.field.user.user.field_user_profissao
     - field.field.user.user.field_user_uf
     - field.field.user.user.user_picture
@@ -36,13 +36,13 @@ content:
     third_party_settings: {  }
     type: string
     region: content
-  field_user_empresa:
-    weight: 9
+  field_user_company:
+    weight: 12
     label: above
     settings:
-      link_to_entity: false
+      link: true
     third_party_settings: {  }
-    type: string
+    type: entity_reference_label
     region: content
   field_user_profissao:
     weight: 10
