--- a/config/default/system.site.yml
+++ b/config/default/system.site.yml
@@ -5,7 +5,7 @@ slogan: ''
 page:
   403: ''
   404: ''
-  front: /homepage
+  front: /node/25
 admin_compact_mode: false
 weight_select_max: 100
 langcode: pt-br
