--- a/config/default/core.entity_view_display.user.user.default.yml
+++ b/config/default/core.entity_view_display.user.user.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.user.user.field_user_body
     - field.field.user.user.field_user_cidade
     - field.field.user.user.field_user_company
+    - field.field.user.user.field_user_drupal
     - field.field.user.user.field_user_profissao
     - field.field.user.user.field_user_uf
     - field.field.user.user.user_picture
@@ -43,6 +44,14 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
+    region: content
+  field_user_drupal:
+    weight: 13
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   field_user_profissao:
     weight: 10
