Contact menu and disabled footer menu

--- a/config/default/block.block.bartik_subtheme_footer.yml
+++ b/config/default/block.block.bartik_subtheme_footer.yml
@@ -1,6 +1,6 @@
 uuid: 2517f977-8868-44e2-930d-4b6f4ae2fd96
 langcode: pt-br
-status: true
+status: false
 dependencies:
   config:
     - system.menu.footer
