--- a/config/default/contact.form.feedback.yml
+++ b/config/default/contact.form.feedback.yml
@@ -5,9 +5,10 @@ dependencies: {  }
 _core:
   default_config_hash: vymHlgJy26BuI5GGj9-IXjwR3dRC5C0tij4BpWJnoqw
 id: feedback
-label: 'Website feedback'
+label: Contato
 recipients:
   - drupalcampsp@gmail.com
+  - igor.barato@gmail.com
 reply: ''
 weight: 0
 message: 'Sua mensagem foi enviada.'
