--- a/config/default/field.field.node.article.field_image.yml
+++ b/config/default/field.field.node.article.field_image.yml
@@ -10,7 +10,7 @@ id: node.article.field_image
 field_name: field_image
 entity_type: node
 bundle: article
-label: Image
+label: 'Hero Image'
 description: ''
 required: true
 translatable: false
